--- a/login/css/style.css
+++ b/login/css/style.css
@@ -8,9 +8,7 @@ html {
 	-moz-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-input[type="submit"] {
-	-webkit-appearance: none;
-}
+
 *, *:after, *:before {
 	box-sizing: border-box;
 	margin: 0;
@@ -169,7 +167,7 @@ p {
 .loading{
 	visibility: visible !important;
 }
-
+ 
 /* No tocar, no hace nada */
 .login-with{
 	color: #ffffff;
@@ -181,7 +179,7 @@ p {
 	font-family: 'gidoleregular';
 	margin-bottom: 15px;
 }
-.social-login-btn{}
+
 .social-login-btn li{
 	display: inline-block;
 	vertical-align: middle;
@@ -195,13 +193,6 @@ p {
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
 	border-radius: 25px;
-}
-.social-login-btn li.facebook-btn a i{color: #997a40;}
-.social-login-btn li.twitter-btn a i{color: #ee8d55;}
-.social-login-btn li.google-btn a img{
-	display: inline-block;
-	vertical-align: middle;
-	margin-top: -4px;
 }
 
 .login-form-slider{
@@ -219,12 +210,10 @@ p {
 	display: none;
 }
 .login-form-slider .slide.login-slide{display: block;}
-.login-form-slider .slide.signup-slide{}
-.login-form-slider .slide.forgot-password-slide{}
 
 /*Login*/
 .index5 .style5{
-	background: url(../images/fede2.jpg) no-repeat center center fixed;  /* asi la imagen esta centrada*/
+	background: url(../images/abstract-gradient-orange-background-with-wavy-and-circle-shape-suitable-for-wallpapers-banners-events-templates-pages-and-others-free-vector.jpg) no-repeat center center fixed;  /* asi la imagen esta centrada*/
 	background-size: cover;
 }
 .style5 .login-box{
@@ -233,9 +222,9 @@ p {
 	width: 100%;
 	height: 500px;
 	background: rgb(252, 238, 211);
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
 	position: relative;
 	font-size: 16px;
 	font-family: 'Varela Round', sans-serif;
@@ -249,8 +238,9 @@ p {
 	margin-bottom: 20px;
 }
 .style5 .style5-left{
-	background: url(../images/front2.jpg) no-repeat;
-	background-size: cover;
+	background: url(../images/img_aula.avif) no-repeat; 
+	
+	background-size: 100%;
 	color: rgba(255,255,255,.7);
 	font-size: 16px;
 }
@@ -297,12 +287,13 @@ p {
 	-o-transition: background 0s ease-out;
 	transition: background 0s ease-out;
 }
-.style5 .form-group.is-focus .form-control{
+/* .style5 .form-group.is-focus .form-control{
 	outline: none;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#fea845), to(#f89728)), -webkit-gradient(linear, left top, left bottom, from(#fec345), to(#fedc45));
 	background-image: -webkit-linear-gradient(#fe8f45, #f89616), -webkit-linear-gradient(#fec345, #f0ce36);
 	background-image: -o-linear-gradient(#fedc45, #fec345), -o-linear-gradient(#feeb45, #feae45);
-	/* barras que se mueven*/background-image: linear-gradient(#fa7f0b, #f5a209), linear-gradient(#fed345, #df9d3a);
+	/* barras que se mueven*
+	background-image: linear-gradient(#fa7f0b, #f5a209), linear-gradient(#fed345, #df9d3a);
 	-webkit-background-size: 100% 2px, 100% 1px;
 	background-size: 100% 2px, 100% 1px;
 	-webkit-box-shadow: none;
@@ -310,8 +301,9 @@ p {
 	-webkit-transition-duration: 0.4s;
 	-o-transition-duration: 0.4s;
 	transition-duration: 0.4s;
-}
+} */
 .style5 .form-group.is-focus .label {
+	
 	top: 0;
 	z-index: 12;
 	font-size: 12px;
@@ -323,6 +315,42 @@ p {
 	font-size: 12px;
 	font-weight: 400;
 }
+
+.btn-atras{
+	position: absolute;
+	top: 10px; /* Ajusta la distancia desde el borde superior */
+	left: 10px; /* Ajusta la distancia desde el borde izquierdo */
+	height: 60px;
+	width: 60px;
+	display: inline-block;
+	border: 0;
+	font-size: 0;
+	cursor: pointer;
+	background: url(../images/arrow-right-c.svg) no-repeat #f7ab54;
+	transform: rotate(180deg);
+	background-position: center center;
+	background-size: 25px 25px;
+	-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	border-radius: 100%;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	-webkit-box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, .20);
+	-moz-box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, .20);
+	box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, .20);
+
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 .style5 .form-group .label {
 	position: absolute;
 	top: 27px;
