--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,43 @@
+
+::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 5px;
+}
+::-webkit-scrollbar-track {
+	background: rgba(46,56,71,.5);
+	border-radius: 0;
+}
+::-webkit-scrollbar-thumb{
+	cursor: pointer;
+	border-radius: 0px;
+	background: rgba(29,37,71,1);
+	-webkit-transition: color 0.2s ease;
+	-moz-transition: color 0.2s ease;
+	-o-transition: color 0.2s ease;
+	transition: color 0.2s ease;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Varela Round', sans-serif !important;
+    font-weight: 400;
+  
 
 }
 
 body {
     color: #332622 !important;
     background-color: #fbf2db !important;
+    
 }
 
 /* ESTILOS NAVBAR Y LOADING PAGE */
 .navbar-brand {
     margin-left: 30px;
     font-weight: 500;
-    color: #ffc594 !important; /* logo */
+    color:   rgb(252, 238, 211)!important; /* logo */
     font-size: 24px;
     transition: 0.3s color;
 }
@@ -25,7 +47,8 @@ nav {
 }
 
 .navbar {
-    background-color: #ff8040 !important;
+    background-color:#e66c2c !important;
+    border-bottom:  rgb(252, 238, 211) 2px solid;
     /*  width: 100%; */
     /* height: 80px; */
     /* border-radius: 16px; */
@@ -34,7 +57,7 @@ nav {
 
 
 .login-button {
-    background-color: #ffc594 ;
+    background-color:  rgb(252, 238, 211) ;
     color: #e66c2c;
     font-size: 14px;
     padding: 8px 20px;
@@ -42,11 +65,13 @@ nav {
     text-decoration: none;
     transition: 0.3s background-color;
     margin-right: 30px;
+    
+    font-weight: 500;
 }
 
 .login-button:hover {
-    background-color: #e66c2c ;
-    color: #ffc594;
+    background-color: #e6844f ;
+    color: rgb(252, 238, 211);
 }
 
 .navbar-togger {
@@ -103,21 +128,34 @@ nav {
     display: flex;
     max-width: 1100px;
 }
-
+.promo{
+    font-size: 30px;
+    margin-top: 150px;
+    margin-bottom: 60px;
+    text-align: center;
+    color: #e66c2c;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 .card {
-    width: 100%;
-    margin: 20px;
+    width: 90%;
+     margin: 20px; 
     border-radius: 6px;
     overflow: hidden;
     background: #fff;
     box-shadow: 0px 1px 10px rgb(0, 0, 0, 0, 2);
     cursor: default;
     transition: all 400ms ease;
+    
 }
 
 .card:hover {
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
     transform: translateY(-3%);
+}
+
+.card-header{
+background-color: #9D9D9D;
 }
 
 
