--- a/css/login.css
+++ b/css/login.css
@@ -202,6 +202,14 @@ body::after {
     border-color: red;
     box-shadow: 0 8px 24px hsla(32, 85%, 64%, 0.3);
 }
+.back-home {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+    font-size: 24px;
+    color: #fd7e14;
+}
 
 
 
