--- a/css/userHome.css
+++ b/css/userHome.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /*Varialbes utilizadas en css*/
 :root {
     --sidebar:#ffd6a3;
@@ -14,7 +14,7 @@
     margin: 0 ;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
+    font-family: "Poppins", sans-serif ;
 }
 body{
     height: 100vh;
@@ -22,177 +22,11 @@ body{
     background-color: var(--fondo);
 }
 
-/*Menu para celular*/
-.menu{
-    position: fixed;
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    background-color: var(--opcion2);
-    color: var(--color);
-    right: 15px;
-    top: 15px;
-    z-index: 100;
-}
-
-
-/*Barra Lateral Escritorio*/
-.barra-lateral{
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 250px;
-    height: 100%;
-    overflow: hidden; 
-    padding: 20px 15px;
-    background-color: var(--sidebar);
-    transition: width 0.5s ease,background-color 0.3s ease,left 0.5s ease;
-    box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.5);
-    z-index: 50;
-}
-
-/* Aumenta la especificidad para anular el margen de los elementos ul de Bootstrap */
-body ul {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    padding-left: 0 !important; 
-  }  
-
-.mini-barra-lateral{
-    width: 80px;
-}
-.barra-lateral span{
-    width: 120px;
-    white-space: wrap;
-    font-size: 18px;
-    text-align: center;
-    opacity: 1;
-    transition: opacity 0.5s ease,width 0.5s ease;
-}
-.barra-lateral span.oculto{
-    opacity: 0;
-    width: 0;
-}
-
-
-/*Nombre de la página */
-
-
-
-
-
-.barra-lateral .nombre-pagina{
-    width: 100%;
-    height: 45px;
-    color: var(--color-texto);
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-    
-}
-.barra-lateral .nombre-pagina ion-icon{
-    min-width: 50px;
-    font-size: 40px;
-    cursor: pointer;
-}
-.barra-lateral .nombre-pagina span{
- 
-    margin-left: 15px;
-    font-size: 25px;
-}
-
-
-/*Botón*/
-.barra-lateral .boton{
-    width: 100%;
-    height: 45px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: 10px;
-    background-color: var(--color);
-    color: var(--color);
-}
-.barra-lateral .boton ion-icon{
-    min-width: 50px;
-    font-size: 25px;
-}
-
-
-/*Menu Navegación*/
-.barra-lateral .navegacion{
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-.barra-lateral .navegacion::-webkit-scrollbar{
-    width: 5px;
-}
-.barra-lateral .navegacion::-webkit-scrollbar-thumb{
-    background-color: var(--color);
-    border-radius: 5px;
-}
-.barra-lateral .navegacion::-webkit-scrollbar-thumb:hover{
-    background-color: var(--color);
-}
-.barra-lateral .navegacion li{  
-    list-style: none;
-    display: flex;
-    margin-bottom: 5px;
-}
-.barra-lateral .navegacion a{
-    width: 100%;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    border-radius: 10px;
-    color: var(--color);
-    transition: background-color 0.3s ease; 
-}
-
-.barra-lateral .navegacion a:hover {
-    color: #f8f6f4;
-    background-color: var(--hover);
-    color: var(--color);
-}
-.btnSalir {
-    width: 100%;
-    height: 45px;
-    border-radius: 10px;
-   
-    border: none;
-    background-color: transparent;
-    display: inline-flex;
-    align-items: center; /* Centra verticalmente */
-    
-    gap: 8px; /* Espacio entre el icono y el texto */
-    transition: background-color 0.3s ease; /* Transición suave para el cambio de color */
-}
-.btnSalir:hover{
-    
-    background-color: var(--hover);
-    color: var(--color); 
-}
- .navegacion li:hover {
-    color: #f8f6f4;
-}
-.barra-lateral .navegacion ion-icon{
-    min-width: 50px;
-    font-size: 25px;
-}
 
 
 /*main*/
-main{
+ main{
+    
     margin-left: 90px;
     padding: 20px;
     transition: margin-left 0.5s ease;
@@ -200,6 +34,13 @@ main{
 main.min-main{
     margin-left: 80px;
 }
+ 
+
+/* .sidebar.close  ~ .home-section{
+    left: 78px;
+    width: calc(100%-78px);
+}
+ */
 
 
 
@@ -291,76 +132,6 @@ footer {
     padding: 20px 0;
     position: relative;
   }
-
-
-/* Responsive para movil, los media querys van siempre abajo de todo , porfavor respeten esa modalidad*/
-@media (max-height: 660px){
-    .barra-lateral .nombre-pagina{
-        margin-bottom: 5px;
-    }
-    .barra-lateral .modo-oscuro{
-        margin-bottom: 3px;
-    }
-}
-@media (max-width: 600px){
-    .barra-lateral{
-        position: fixed;
-        left: -250px;
-    }
-    .max-barra-lateral{
-        left: 0;
-    }
-    .menu{
-        display: flex;
-    }
-    .menu ion-icon:nth-child(2){
-        display: none;
-    }
-    main{
-        margin-left: 0;
-    }
-    main.min-main{
-        margin-left: 0;
-    }
-    
-}
-
-@media (max-width: 740px){
-    .barra-lateral{
-        position: fixed;
-        left: -250px;
-    }
-    .max-barra-lateral{
-        left: 0;
-    }
-    .menu{
-        display: flex;
-    }
-    .menu ion-icon:nth-child(2){
-        display: none;
-    }
-    main{
-        margin-left: 0;
-    }
-    main.min-main{
-        margin-left: 0;
-    }
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
