--- a/css/menuLateral.css
+++ b/css/menuLateral.css
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /*Varialbes utilizadas en css*/
 :root {
-    --sidebar:#ffd6a3;
+    --sidebar:#f7ab54;
     --letra: #142f30;
     --fondo: #f8f6f4;
-    --hover: #fd7e14;
-    --opcion1: #fd7d1463;
-    --opcion2: #f7ab54;
+    --hover-text: #fd7e14;
+   
+   
 }
 
 *{
@@ -37,17 +37,13 @@
     align-items: center;
 
 }
-.sidebar .logo i{
-    font-size:30px ;
-    color: #fff;
-   /*  background-color: red; */
-    height: 50px;
-    min-width: 78px;
-    text-align: center;
-    line-height: 50px;
+.bxs-school{
     cursor: pointer;
-
+    width: 60px;
+    height: 60px;
+    margin-left: 6px;
 }
+
 .sidebar .logo .titulo{
     font-size:22px ;
     color: #fff;
@@ -63,7 +59,7 @@
 }
 
 .sidebar .nav-links{
-    background-color: #f7ab54;
+    background-color: var(--sidebar);
     height: 100%;
     padding:30px 0 150px 0;
     overflow: auto;
@@ -143,6 +139,7 @@ display: block;
     transition: all 0.4s ease;
 }
 .sidebar .nav-links li .sub-menu a:hover{
+    color: var(--hover-text);
     opacity: 1;
 
 }
@@ -198,7 +195,6 @@ display: block;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1d1b31;
     padding: 6px 0 ;
     left: 0;
     transition:  all 0.5s ease;
@@ -217,12 +213,11 @@ display: block;
 
 }
 .sidebar .profile-details img{
-    height: 52px;
-    width: 52px;
+    height: 60px;
+    width: 60px;
     object-fit: cover;
     border-radius: 16px;
     margin: 0 11px 0 12px;
-    background: #1d1b31;
     padding: 10px;
     transition:  all 0.5s ease;
 
@@ -234,7 +229,7 @@ display: block;
 .sidebar .profile-details .nombre,
 .sidebar .profile-details .rol{
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 500;
     white-space: nowrap;
 }
@@ -248,3 +243,43 @@ display: none;
 }
 
 
+/* Aagrego media querys para el sidebar menu lateral 768px */
+@media (max-width: 768px) {
+    .sidebar {
+        transform: translateX(-100%);
+    }
+    .sidebar:not(.close) {
+        transform: translateX(0);
+    }
+   
+    
+}
+@media (min-width: 768px) {
+    .toggle-sidebar-btn {
+        display: none;
+    }
+}
+
+
+/* estilos del boton flotante*/
+.toggle-sidebar-btn {
+    position: absolute;
+    margin: 5px;
+    width: 10%;
+    height: 10%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: var(--hover-text);
+    color: #fff;
+    border: none;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.toggle-sidebar-btn i{
+    font-size: 25px;
+}
+
+.toggle-sidebar-btn:hover {
+    background-color: #444;
+}
