--- a/css/user.css
+++ b/css/user.css
@@ -1,7 +1,9 @@
 body {
     font-family: Arial, sans-serif;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 .table-container {
     /* width: 80%; */
     margin: 20px auto;
@@ -56,8 +58,8 @@ input[type="date"] {
 table {
    width: 100%; 
     border-collapse: collapse;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+  /*   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    background-color: #fff; */
 }
 
 th, td {
