--- a/css/notificacion.css
+++ b/css/notificacion.css
@@ -9,7 +9,15 @@
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
   }
-  
+  .banner-noti{
+    width: 100%;
+    height: 50% !important;
+    background-color: #1d1b31;
+    color: aliceblue;
+    text-align: center;
+}
+
+
   /* Contenedor del formulario */
   .form-container {
     max-width: 600px;
@@ -77,10 +85,13 @@
     }
     form {
       padding: 10px;
+      margin-bottom: 90px !important;
+
     }
     input, select, textarea {
       margin-bottom: 10px;
     }
+   
   }
   
   @media (max-width: 480px) {
@@ -93,5 +104,10 @@
     }
     input, select, textarea {
       margin-bottom: 5px;
+    }
+    .main{
+      margin-bottom: 100px !important;
+
+      
     }
   }
