gestion de cursos avanzado

--- a/css/anadirMateria.css
+++ b/css/anadirMateria.css
@@ -57,7 +57,9 @@ main {
 }
 
 /* Botón de envío */
-.btn-añadir {
+
+
+.btn-enviar{
     background-color: #fd7e14;
     color: #fff;
     padding: 10px 20px;
@@ -66,7 +68,7 @@ main {
     cursor: pointer;
 }
 
-.btn-añadir:hover {
+.btn-enviar:hover{
     background-color: #f7ab54;
 }
 
@@ -90,57 +92,3 @@ main {
   }
   
 
-  
-.titulo{
-    color: var(--letra); 
-    font-weight: 600;
-}
-.sug-año{
-    color: var(--sugerencia);
-}
-.container-form label{
-    color: var(--letra); 
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.btn-guardar{
-    background-color: #fd7e14;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.btn-guardar:hover{
-    background-color: #f7ab54;
-}
-
-.btn-cerrar:hover{
-    background-color: red;
-    color: #ddd;
-}
-
-
-
-label {
-    margin-bottom: 15px;
-    margin-top: 15px;
-    display: block;
-   
-  }
-  
- select{
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-  }
-  
-  select {
-    width: 100%;
-    padding: 10px;
-  }
-  
- 
