--- a/css/gestionCurso.css
+++ b/css/gestionCurso.css
@@ -60,3 +60,75 @@ th {
     color: whitesmoke !important;
 }
 
+
+.titulo{
+    color: var(--letra); 
+    font-weight: 600;
+}
+.sug-año{
+    color: var(--sugerencia);
+}
+.container-form label{
+    color: var(--letra); 
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.btn-guardar{
+    background-color: #fd7e14;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-guardar:hover{
+    background-color: #f7ab54;
+}
+
+.btn-cerrar:hover{
+    background-color: red;
+    color: #ddd;
+}
+
+
+
+label {
+    margin-bottom: 15px;
+    margin-top: 15px;
+    display: block;
+   
+  }
+  
+ select{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+  }
+  
+  select {
+    width: 100%;
+    padding: 10px;
+  }
+  
+ .table-wrapper {
+  overflow-y: auto;
+  max-height: calc(100vh - 200px); /* ajusta el valor según tus necesidades */
+  padding-bottom: 20px; /* agrega algo de padding para evitar la superposición del pie de página */
+}
+
+main {
+  display: grid;
+  justify-items: center;
+  margin-bottom: 8%; /* mantén esta regla para mantener la brecha entre el contenido principal y el pie de página */
+}
+
+ footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+} 
