--- a/css/gestionMaterias.css
+++ b/css/gestionMaterias.css
@@ -114,4 +114,22 @@ label {
     padding: 10px;
   }
   
- 
+  .table-wrapper {
+    overflow-y: auto;
+    max-height: calc(100vh - 200px); /* ajusta el valor según tus necesidades */
+    padding-bottom: 20px; /* agrega algo de padding para evitar la superposición del pie de página */
+  }
+  
+  main {
+    display: grid;
+    justify-items: center;
+    margin-bottom: 8%; /* mantén esta regla para mantener la brecha entre el contenido principal y el pie de página */
+  }
+  
+   footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+  } 
