todas las paginas son fucnionales con la nueva base de datos y los cambios en el php

--- a/css/gestionEstudiante.css
+++ b/css/gestionEstudiante.css
@@ -138,3 +138,8 @@ main {
     color: #7e7979;
 
 }
+
+table th, table td {
+  text-align: center; /* Centrar horizontalmente */
+  vertical-align: middle; /* Centrar verticalmente */
+}
