--- a/css/gestionCalificaciones.css
+++ b/css/gestionCalificaciones.css
@@ -1,13 +1,150 @@
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 0 1rem;
+:root {
+
+    --letra: #fd7e14;
+    --sugerencia: #f7ab54;
+}
+
+main {
+    display: grid;
+    justify-items: center;
+    margin-bottom:8%;
+
+}
+
+.banner-curso {
+    width: 100%;
+    background-color: #1d1b31;
+    color: aliceblue;
+    text-align: center;
+}
+main {
+   
+    overflow: auto; /* Permite que el contenido de más ancho sea visible */
+}
+
+.table {
+    table-layout: fixed; 
+    border-collapse: collapse;
+    width: 70%;
+    margin-top: 20px !important;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: var(--letra) !important;
+    color:whitesmoke !important;
+}
+#buscador{
+    width: 100%;
+    border-radius: 5px;
+    border:2px solid var(--sugerencia);
+}
+
+#paginador {
+    margin-top: 10px;
+}
+
+#paginador button {
+    background-color: var(--sugerencia) !important;
+    color: #fff;
+    width: 25px;
+    margin: 3px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#paginador button:hover {
+    background-color: var(--letra) !important;
+    color: whitesmoke !important;
+}
+
+
+.titulo{
+    color: var(--letra); 
+    font-weight: 600;
+}
+.sug-año{
+    color: var(--sugerencia);
+}
+.container-form label{
+    color: var(--letra); 
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.btn-guardar{
+    background-color: #fd7e14;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-guardar:hover{
+    background-color: #f7ab54;
+}
+
+.btn-cerrar:hover{
+    background-color: red;
+    color: #ddd;
+}
+
+
+
+label {
+    margin-bottom: 15px;
+    margin-top: 15px;
+    display: block;
+   
+  }
+  
+ select{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+  }
+  
+  select {
+    width: 100%;
+    padding: 10px;
+  }
+  
+
+
+
+ footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+} 
+
+
+
+table th, table td {
+  text-align: center; /* Centrar horizontalmente */
+  vertical-align: middle; /* Centrar verticalmente */
+}
+
+.form-container{
+    width: 50%;
 }
 .form-group {
-    margin-bottom: 1rem;
+    margin-bottom: 0.3rem;
 }
+
 label {
+    color: var(--letra);
+    font-size: 20px;
     display: block;
     margin-bottom: 0.5rem;
     font-weight: 500;
@@ -26,7 +163,7 @@ select, input {
     margin-bottom: 1.5rem;
 }
 button {
-    background-color: #2563eb;
+    background-color: var(--letra);
     color: white;
     padding: 0.5rem 1rem;
     border: none;
@@ -34,5 +171,5 @@ button {
     cursor: pointer;
 }
 button:hover {
-    background-color: #1d4ed8;
+    background-color: var(--sugerencia);
 }
