--- a/css/tomarAsistencia.css
+++ b/css/tomarAsistencia.css
@@ -1,3 +1,8 @@
+:root {
+
+    --letra: #fd7e14;
+    --sugerencia: #f7ab54;
+}
 
 main {
     display: grid;
@@ -40,11 +45,21 @@ label {
 
 .btn-save {
     width: 15%;
+    background-color: var(--letra);
+    color: white;
+    border: none;
     border-radius: 5px;
     margin-top: 2.2rem;
 
 }
+
+.btn-save:hover{
+    border: var(--sugerencia);
+    color:black;
+    
+}
 .btn-save i {
+    
     font-size: 30px;
     text-align: center;
 }
@@ -90,3 +105,18 @@ label {
 }
 
 
+.btn-red {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    margin-top: 15px;
+    /* margin-left: 10px; */
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .btn-red:hover {
+    background-color: #d32f2f;
+  }
+  
