--- a/css/reporteAsistencia.css
+++ b/css/reporteAsistencia.css
@@ -20,7 +20,7 @@ body {
     background-color: #f0f0f0;
     color: #333;
 } */
-.container {
+.container-asis {
     max-width: 800px;
     margin: 0 auto;
     background-color: white;
@@ -28,7 +28,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
-.container h1 {
+.container-asis h1 {
     color: #2c3e50;
     text-align: center;
     margin-bottom: 30px;
@@ -116,4 +116,14 @@ tbody tr:hover {
     .filter-group {
         width: 100%;
     }
+}
+
+.rojo {
+    background-color: #ffcccc; /* Fondo rojo claro */
+    color: #ff0000; /* Texto rojo */
+}
+
+.verde {
+    background-color: #ccffcc; /* Fondo verde claro */
+    color: #008000; /* Texto verde */
 }
