--- a/css/userHome.css
+++ b/css/userHome.css
@@ -166,7 +166,7 @@ main.min-main{
 }
  */
 footer {
-    margin-top: 60px;
+    margin-top: 170px !important;
     bottom: 0;
     left: 0;
     width: 100%;
